<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_package</name>
  <version>0.0.1</version>
  <description>Example package for robot simulation with ROS2 and ros_bt_py</description>
  <maintainer email="desaiz@uni-bremen.de">Zeel Desai</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros_bt_py</depend>
  <depend>example_interfaces</depend>
  <depend>robot_actions</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>